--- a/index.html
+++ b/index.html
@@ -4,20 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    
 </head>
 
 <body>
-    <section> class= "conteudo-principal">
-        <h2 class="titulo-principal"> meus objetivos do ano<samp>_</samp></h2>
+    <section class= "conteudo-principal">
+        <h2 class="titulo-principal"> meus objetivos <span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">tirar carteira</button>
-                <button class="botao">conseguir passar na faculdade</button>
-                <button class="botao">ter boas condições financeiras</button>
+                <button class="botao">Fazer faculdade de direito</button>
+                <button class="botao">Ter boas condições financeiras</button>
                 <button class="botao">ser muito fitns</button>
-        </div>    
+        </div>   
+        <div class="abas-textos">
+            <div class="abas-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Tirar carteira</h3>
+                <h4 class="aba-conteudo-titulo-secundario">1 ano</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Fazer faculdade de direito</h3>
+                <h4 class="aba-conteudo-titulo-secundario">10 meses</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ter boas condições financeiras</h3>
+                <h4 class="aba-conteudo-titulo-secundario">NÃO SEI</h4>
+            </div>
+            <div class="abas-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ser muito fitns</h3>
+                <h4 class="aba-conteudo-titulo-secundario">4 meses</h4>
+            </div>
+
+        </div>
+    </section> 
 </body>
 
 </html>
