--- a/agenda-main/index.html
+++ b/agenda-main/index.html
@@ -1,44 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-    
+    <title>Meus objetivos do ano</title>
 </head>
-
 <body>
-    <section class= "conteudo-principal">
-        <h2 class="titulo-principal"> meus objetivos <span>_</span></h2>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus objetivos de vida<spa826,25</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">tirar carteira</button>
-                <button class="botao">Fazer faculdade de direito</button>
+                <button class="botao ativo">Começar e concluir, faculdade de direito</button>
                 <button class="botao">Ter boas condições financeiras</button>
-                <button class="botao">ser muito fitns</button>
-        </div>   
-        <div class="abas-textos">
-            <div class="abas-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Tirar carteira</h3>
-                <h4 class="aba-conteudo-titulo-secundario">1 ano</h4>
+                <button class="botao">tirar carteira</button>
+                <button class="botao">Comprar casa e carro</button>
             </div>
-            <div class="abas-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Fazer faculdade de direito</h3>
-                <h4 class="aba-conteudo-titulo-secundario">10 meses</h4>
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Começar e concluir, faculdade de direito</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">5 anos</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias0"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas0"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min0"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg0"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Ter boas condições financeiras</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">2 anos</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias1"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas1"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min1"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg1"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">tirar carteira</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">1 ano</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias2"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas2"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min2"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg2"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Comprar casa e carro</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">3 anos</h4>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias3"></p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas3"></p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min3"></p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg3"></p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="abas-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Ter boas condições financeiras</h3>
-                <h4 class="aba-conteudo-titulo-secundario">NÃO SEI</h4>
-            </div>
-            <div class="abas-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Ser muito fitns</h3>
-                <h4 class="aba-conteudo-titulo-secundario">4 meses</h4>
-            </div>
-
         </div>
-    </section> 
-</body>
-
-</html>
+    </section>
+    <script src="main.js"></script>
+</body></html>
